add_subdirectory(internal)
add_subdirectory(testing)

add_subdirectory(Activation)
add_subdirectory(ActivationResponse)
add_subdirectory(Annotation)
add_subdirectory(CannedQuery)
add_subdirectory(CategorisedResult)
add_subdirectory(Category)
add_subdirectory(CategoryRenderer)
add_subdirectory(ColumnLayout)
add_subdirectory(Department)
add_subdirectory(Filters)
add_subdirectory(IdleShutdown)
add_subdirectory(Invocation)
add_subdirectory(Location)
add_subdirectory(OnlineAccountClient)
add_subdirectory(OptionSelectorFilter)
add_subdirectory(RadioButtonsFilter)
add_subdirectory(RangeInputFilter)
add_subdirectory(RatingFilter)
add_subdirectory(ReplyReaper)
add_subdirectory(SwitchFilter)
add_subdirectory(ValueSliderFilter)
add_subdirectory(PreviewWidget)
add_subdirectory(QueryMetadata)
add_subdirectory(Registry)
add_subdirectory(Runtime)
add_subdirectory(ScopeBase)
add_subdirectory(ScopeExceptions)
add_subdirectory(Variant)
add_subdirectory(VariantBuilder)
add_subdirectory(Version)
